Add: smtp setup

--- a/core/home/templates/home/index.html
+++ b/core/home/templates/home/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block start %}
+<a href="/send-email/" class="my-4">Send email</a>
     <h2 class="subheading">This is the Home page</h2>
     <a href="/about/">
         About
